--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
 .App {
+
+}
+
+.home_page{
+  height: 100vh;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+.get_seats {
+  border: 2px solid red;
+  border-radius: 5px;
+  padding: 20px;
+}
+
+
+.get_seats input{
+
+  display: block;
+  margin: 10px;
+  padding: 5px;
+  border: 2px solid red;
+  border-radius: 5px;
+}
+
+
+.get_seats button{
+  margin: 20px;
+  padding: 5px;
   color: white;
+  background-color: red;
+  border: 2px solid red;
+  border-radius: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+.seat_design{
+  width: 40px;
+  height: 80px;
+  margin: auto;
+  display: flex;
+  margin-bottom: 10px;
+  border: 1px solid black;
+  border-radius: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.seat_design button{
+  width: 100%;
+  height: 100%;
+  padding: 5px;
+  font-weight: bold;
+  background-color: rgb(210, 245, 250) ;
+}
+
+
+.seating_area{
+  margin-top: 35px;
+  border: 2px solid red;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+.booking_panel{
+  padding: 20px;
+  margin-top: 35px;
+  margin-left: 35px;
+  height: fit-content;
+  border: 2px solid red;
+  border-radius: 5px;
+}
+.booking_panel button{
+
+  background-color: red;
+  color: white;
+  border: 2px solid red;
+  border-radius: 5px;
 }
